# qualityhub

./: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  PRD.md  QUALITY_STANDARDS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.beads/: config.yaml  issues.jsonl
.claude/agents/: fullstack-developer.md  test-generator.md  test-runner.md  ui-ux-designer.md
.ralphy/: config.yaml  deferred.json  progress.txt
__tests__/: docker-compose.test.js
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/: __init__.py  deps.py  routes.py
apps/ai-service/app/api/routes/: __init__.py  base.py  generate.py
apps/ai-service/app/core/: __init__.py  config.py  security.py
apps/ai-service/app/models/: __init__.py  requests.py  responses.py
apps/ai-service/app/prompts/: __init__.py  bdd_generation.py  test_generation.py
apps/ai-service/app/schemas/: __init__.py  generation.py
apps/ai-service/app/services/: __init__.py  bdd_generator.py  llm_client.py  test_generator.py
apps/ai-service/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_generate_routes.py  test_llm_client.py  test_prompts.py  test_schemas.py  test_security.py  test_services.py
apps/api/: eslint.config.mjs  package.json  tsconfig.json
apps/api/src/: app.module.spec.ts  app.module.ts  main.spec.ts  main.ts
apps/api/src/common/dto/: pagination.dto.spec.ts  pagination.dto.ts
apps/api/src/common/filters/: http-exception.filter.spec.ts  http-exception.filter.ts
apps/api/src/common/interceptors/: transform.interceptor.spec.ts  transform.interceptor.ts
apps/api/src/common/utils/: password.util.spec.ts  password.util.ts
apps/api/src/config/: configuration.spec.ts  configuration.ts  database.config.spec.ts  database.config.ts  index.ts  jwt.config.ts  validation.schema.spec.ts  validation.schema.ts
apps/api/src/database/: data-source.spec.ts  data-source.ts  index.ts
apps/api/src/database/migrations/: 1737837600000-CreateOrganizationsTable.spec.ts  1737837600000-CreateOrganizationsTable.ts  1737837700000-CreateUsersTable.spec.ts  1737837700000-CreateUsersTable.ts  1737837800000-CreateProjectsTable.spec.ts  1737837800000-CreateProjectsTable.ts  1737837900000-CreateTestSuitesTable.spec.ts  1737837900000-CreateTestSuitesTable.ts  1737838000000-CreateSectionsTable.spec.ts  1737838000000-CreateSectionsTable.ts  1737838100000-CreateTestCasesTable.spec.ts  1737838100000-CreateTestCasesTable.ts  1737838200000-CreateTestCaseVersionsTable.spec.ts  1737838200000-CreateTestCaseVersionsTable.ts  1737838300000-CreateMilestonesTable.spec.ts  1737838300000-CreateMilestonesTable.ts  (+12 more)
apps/api/src/test/: helpers.ts  index.ts  test-database.ts
apps/api/test/: app.e2e-spec.ts  auth.e2e-spec.ts  test-cases.e2e-spec.ts
apps/web/: eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.test.js  tsconfig.json  tsconfig.node.json  vite-config.test.ts  vite.config.ts
apps/web/e2e/: auth.setup.ts  auth.spec.ts  fixtures.ts  helpers.ts  navigation.spec.ts  projects.spec.ts  test-cases.spec.ts  test-execution.spec.ts
apps/web/src/: App.tsx  index.css  router.test.tsx  router.tsx
apps/web/src/constants/: routes.ts
apps/web/src/hooks/: index.ts  useAuth.test.ts  useAuth.ts  useDashboard.ts  useSections.ts  useSessionInit.test.tsx  useSessionInit.ts  useTestCases.ts  useTestExecution.ts  useTheme.test.ts  useTheme.ts  useToast.test.tsx  useToast.ts
apps/web/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  index.ts
apps/web/src/store/: hooks.test.tsx  hooks.ts  index.test.ts  index.ts  store.ts
apps/web/src/styles/: globals.css  globals.test.ts
apps/web/src/test/: setup.ts
apps/web/src/types/: index.ts
apps/web/src/utils/: api.test.ts  api.ts  avatar.ts  cn.test.ts  date.test.ts  date.ts  index.ts  status.test.ts  status.ts  storage.test.ts  storage.ts
docs/: README.md  api.md  architecture.md  setup.md
infrastructure/docker/: .dockerignore  .env.example  Dockerfile.ai  Dockerfile.ai-service  Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
infrastructure/docker/__tests__/: docker-config.test.js
scripts/: validate-env-example.js  validate-tsconfig.js  validate-turbo-config.js
(+428 files in other folders)
